java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateField5-hints.pass
Create Field t in org.netbeans.test.java.hints.CreateField5
Create Parameter t
Create Local Variable t
